# Retrieval-based-Voice-Conversion-WebUI

./: .gitignore  go-realtime-gui-dml.bat  go-realtime-gui.bat  go-web.bat
.claude/: settings.local.json
LoraModel/: PHASE1_REPORT.md  PROGRESS.md  PROJECT_OUTLINE.md  QUICKSTART.md  README.md  TODO.md  UPDATE_SUMMARY.md  download_models.py  prepare_data.py  requirements.txt
LoraModel/.claude/: settings.local.json
LoraModel/docs/: PHASE1_SUMMARY.md  TEST_FILES_REQUIREMENTS.md  phase1_lora_core.md  phase2_model_integration.md
LoraModel/examples/: basic_usage.py
LoraModel/inference/: __init__.py  infer_lora.py  model_loader.py
LoraModel/lora/: __init__.py  lora_config.py  lora_layer.py  lora_utils.py
LoraModel/models/: __init__.py  generator_lora.py  resblock.py  synthesizer_lora.py
LoraModel/output/: config.json
LoraModel/output/checkpoints/: lora_best.pth  training_state.pth
LoraModel/output/logs/: events.out.tfevents.1769585129.mac-min1deMac-mini.local.67546.0  events.out.tfevents.1769585377.mac-min1deMac-mini.local.69795.0  events.out.tfevents.1769585456.mac-min1deMac-mini.local.70612.0  events.out.tfevents.1769585709.mac-min1deMac-mini.local.72996.0  events.out.tfevents.1769585760.mac-min1deMac-mini.local.73456.0  events.out.tfevents.1769586739.mac-min1deMac-mini.local.83691.0  events.out.tfevents.1769590555.mac-min1deMac-mini.local.22761.0  events.out.tfevents.1769590565.mac-min1deMac-mini.local.22865.0
LoraModel/output/preprocessed/: filelist.txt  metadata.json
LoraModel/output/preprocessed/2a_f0/: 0_0.npy  0_1.npy  0_2.npy  0_3.npy  0_4.npy  0_5.npy  0_6.npy  1_10.npy  1_11.npy  1_12.npy  1_7.npy  1_8.npy  1_9.npy  2_13.npy  2_14.npy  2_15.npy  2_16.npy  2_17.npy  2_18.npy  3_19.npy  3_20.npy  3_21.npy  3_22.npy  3_23.npy  3_24.npy  3_25.npy  4_26.npy  4_27.npy  4_28.npy  4_29.npy  4_30.npy  4_31.npy  5_32.npy  5_33.npy  5_34.npy  5_35.npy  5_36.npy  5_37.npy  5_38.npy  5_39.npy  (+7 more)
LoraModel/output/preprocessed/2b_f0nsf/: 0_0.npy  0_1.npy  0_2.npy  0_3.npy  0_4.npy  0_5.npy  0_6.npy  1_10.npy  1_11.npy  1_12.npy  1_7.npy  1_8.npy  1_9.npy  2_13.npy  2_14.npy  2_15.npy  2_16.npy  2_17.npy  2_18.npy  3_19.npy  3_20.npy  3_21.npy  3_22.npy  3_23.npy  3_24.npy  3_25.npy  4_26.npy  4_27.npy  4_28.npy  4_29.npy  4_30.npy  4_31.npy  5_32.npy  5_33.npy  5_34.npy  5_35.npy  5_36.npy  5_37.npy  5_38.npy  5_39.npy  (+7 more)
LoraModel/output/preprocessed/3_feature768/: 0_0.npy  0_1.npy  0_2.npy  0_3.npy  0_4.npy  0_5.npy  0_6.npy  1_10.npy  1_11.npy  1_12.npy  1_7.npy  1_8.npy  1_9.npy  2_13.npy  2_14.npy  2_15.npy  2_16.npy  2_17.npy  2_18.npy  3_19.npy  3_20.npy  3_21.npy  3_22.npy  3_23.npy  3_24.npy  3_25.npy  4_26.npy  4_27.npy  4_28.npy  4_29.npy  4_30.npy  4_31.npy  5_32.npy  5_33.npy  5_34.npy  5_35.npy  5_36.npy  5_37.npy  5_38.npy  5_39.npy  (+7 more)
LoraModel/output/preprocessed/4_spec/: 0_0.spec.pt  0_1.spec.pt  0_2.spec.pt  0_3.spec.pt  0_4.spec.pt  0_5.spec.pt  0_6.spec.pt  1_10.spec.pt  1_11.spec.pt  1_12.spec.pt  1_7.spec.pt  1_8.spec.pt  1_9.spec.pt  2_13.spec.pt  2_14.spec.pt  2_15.spec.pt  2_16.spec.pt  2_17.spec.pt  2_18.spec.pt  3_19.spec.pt  3_20.spec.pt  3_21.spec.pt  3_22.spec.pt  3_23.spec.pt  3_24.spec.pt  3_25.spec.pt  4_26.spec.pt  4_27.spec.pt  4_28.spec.pt  4_29.spec.pt  4_30.spec.pt  4_31.spec.pt  5_32.spec.pt  5_33.spec.pt  5_34.spec.pt  5_35.spec.pt  5_36.spec.pt  5_37.spec.pt  5_38.spec.pt  5_39.spec.pt  (+7 more)
LoraModel/output/preprocessed/training_data/: 0_0.pt  0_1.pt  0_2.pt  0_3.pt  0_4.pt  0_5.pt  0_6.pt  1_10.pt  1_11.pt  1_12.pt  1_7.pt  1_8.pt  1_9.pt  2_13.pt  2_14.pt  2_15.pt  2_16.pt  2_17.pt  2_18.pt  3_19.pt  3_20.pt  3_21.pt  3_22.pt  3_23.pt  3_24.pt  3_25.pt  4_26.pt  4_27.pt  4_28.pt  4_29.pt  4_30.pt  4_31.pt  5_32.pt  5_33.pt  5_34.pt  5_35.pt  5_36.pt  5_37.pt  5_38.pt  5_39.pt  (+7 more)
LoraModel/preprocessing/: __init__.py  audio_processor.py  feature_extractor.py  pipeline.py
LoraModel/scripts/: infer_lora_e2e.py  merge_lora.py  prepare_long_audio.py  test_e2e.py  train_lora_e2e.py
LoraModel/test_output/: test_results.json
LoraModel/tests/: __init__.py  test_e2e.py  test_inference.py  test_lora_core.py  test_model.py  test_training.py
LoraModel/training/: __init__.py  data_loader.py  losses.py  train_lora.py
RVC_C/: CMakeLists.txt  NETWORK_ARCHITECTURE_ANALYSIS.md  README.md  REALTIME_STREAMING_ANALYSIS.md  TEST_REPORT.md
RVC_C/documents/: streaming_implementation.md
RVC_C/documents/prepare/: FEASIBILITY_ANALYSIS.md  ONNX_CORE_DEVELOPMENT_GUIDE.md  ONNX_DEVELOPMENT_PLAN.md  ONNX_VS_HANDWRITTEN_ANALYSIS.md
RVC_C/include/: audio_processor.h  f0_extractor.h  mt19937.h  onnx_inference.h  rvc_onnx.h  rvc_streaming.h  stft.h  utils.h
RVC_C/src/: audio_processor.cpp  f0_extractor.cpp  onnx_inference.cpp  rvc_onnx.cpp  rvc_streaming.cpp  stft.cpp  utils.cpp
RVC_C/test/: convert_to_onnx.py  converted_output.pkf  debug_compare.py  debug_contentvec.npy  debug_f0.npy  debug_pitch.npy  debug_pitchf.npy  debug_rnd.npy  debug_synth_output.npy  export_hubert_onnx.py  export_layer_outputs.py  generate_test_data.py  layer_compare.py  py_audio_16k.npy  py_contentvec_output.npy  ref_f0.npy  ref_pitch.npy  ref_pitchf.npy  rvc_reference.py  test_e2e.py  test_streaming_python.py  verify_differences.py
RVC_C/tests/: test_f0.cpp  test_full_pipeline.cpp  test_hubert_compare.cpp  test_mt19937.cpp  test_onnx_runtime.cpp  test_pipeline.cpp  test_stft.cpp  test_streaming.cpp  test_streaming_e2e.cpp  test_streaming_integration.cpp  test_synth_compare.cpp  test_synthesizer.cpp
infer/lib/: rtrvc.py
tools/: rvc_for_realtime.py
